# ReasonSoT

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  config.py  demo.py  pyproject.toml  requirements.txt
benchmarks/: run_benchmarks.py
benchmarks/scenarios/: behavioral_leadership.json  mixed_adaptive.json  technical_python.json
docs/: README.md  architecture.md  overview.md  workflow.md
docs/design/: knowledge-graph.md  prefix-caching.md  reasoning-modes.md  routing.md
docs/html/: approach.html  index.html  solution-architecture.html  workflow.html
reason_sot/: __init__.py  types.py
reason_sot/core/: dst.py  early_exit.py  mot.py  router.py  speculative.py  system1.py  system2.py
reason_sot/interview/: credit.py  engine.py  followup.py  knowledge_graph.py
reason_sot/llm/: cache.py  client.py  models.py
reason_sot/persona/: manager.py  profiles.py
reason_sot/persona/definitions/: behavioral_interviewer.yaml  career_coach.yaml  technical_interviewer.yaml
reason_sot/scoring/: benchmarks.py  latency.py  metrics.py
tests/: conftest.py  test_dst.py  test_followup.py  test_interview_engine.py  test_knowledge_graph.py  test_mot.py  test_persona.py  test_router.py  test_scoring.py  test_system1.py  test_system2.py
